--- a/content/2016/Best_Images_of_2015.adoc
+++ b/content/2016/Best_Images_of_2015.adoc
@@ -1,7 +1,7 @@
 title=Best Images of 2015
 date=2016-01-16
 type=post
-status=published
+status=draft
 tags=Photography, 2015
 ~~~~~~
 I've taken a few hard moments
@@ -12,7 +12,7 @@ and I pared it down from there
 over a couple hours.
 
 == The Orb at Ardmore
-image::../assets/images/2015/orb.jpg[]
+image::{docdir}images/2015/orb.jpg[]
 The Orb, 
 the legendary ambient musicians, 
 put on an amazing show
