--- a/content/2016/Best_Images_of_2015.adoc
+++ b/content/2016/Best_Images_of_2015.adoc
@@ -12,7 +12,7 @@ and I pared it down from there
 over a couple hours.
 
 == The Orb at Ardmore
-image::{content_rootpath}images/2015/orb.jpg[]
+image::{site_host}images/2015/orb.jpg[]
 The Orb, 
 the legendary ambient musicians, 
 put on an amazing show
@@ -30,7 +30,7 @@ and ready to go, since I had freely shot
 the opening act.
 
 == DJ Uranko at Tellus 360
-image::{content_rootpath}images/2015/uranko.jpg[]
+image::{site_host}images/2015/uranko.jpg[]
 I was out to Tellus to see friends
 and they had a guest DJ,
 so I had some fun shooting as always.
@@ -88,14 +88,14 @@ really carrying more gear
 into clubs.
 
 == Inside and Out
-image::{content_rootpath}images/2015/duplicity.jpg[]
+image::{site_host}images/2015/duplicity.jpg[]
 I had the great opportunity to shoot with Marsha Denill
 in the same house with Brooke Shaden!
 The inspiration was strong this day,
 since I knew others would be making amazing images.
 
 == Fiesta
-image::{content_rootpath}images/2015/fiesta.jpg[]
+image::{site_host}images/2015/fiesta.jpg[]
 I love photographing toys,
 and my bright green Ford Fiesta 
 is my favorite car I've had, 
