--- a/content/2016/Best_Images_of_2014.adoc
+++ b/content/2016/Best_Images_of_2014.adoc
@@ -1,7 +1,7 @@
 title=Best Images of 2014
 date=2016-01-18
 type=post
-status=draft
+status=published
 tags=Photography, 2014
 ~~~~~~
 
@@ -12,14 +12,13 @@ This was slightly harder than
 the exercise for 2015 for some reason.
 
 
-image::{site_host}images/2014/aikido.jpg[]
-image::{site_host}images/2014/aleesha.jpg[]
-image::{site_host}images/2014/bench.jpg[]
 image::{site_host}images/2014/briana_multiply.jpg[]
 image::{site_host}images/2014/cold.jpg[]
-image::{site_host}images/2014/cosmic.jpg[]
+image::{site_host}images/2014/aleesha.jpg[]
 image::{site_host}images/2014/elsewhere.jpg[]
 image::{site_host}images/2014/fire.jpg[]
+image::{site_host}images/2014/cosmic.jpg[]
 image::{site_host}images/2014/funkbot.jpg[]
 image::{site_host}images/2014/joy.jpg[]
-image::{site_host}images/2015/fiesta.jpg[]
+image::{site_host}images/2014/bench.jpg[]
+image::{site_host}images/2014/aikido.jpg[]
