added a bit about feedly/podcasts

--- a/content/2016/LIFO_Life.adoc
+++ b/content/2016/LIFO_Life.adoc
@@ -12,25 +12,54 @@ and I couldn't really convince myself it was necessary.
 I just don't seem to have that addiction trait.
 
 .Social
-Our social feeds are in reverse chronological order -- 
+Our social feeds are in reverse chronological order --
 dip in, see the latest, scroll a little to see something older,
-and then move on. 
-Sure I'll hit reload a couple times 
+and then move on.
+Sure I'll hit reload a couple times
 when I'm bored to see something new,
 (but I could totally stop whenever I want).
 I don't feel like I need to necessarily click the bait
 or read everything.
 
+.News and Current Events
+When I want to keep up with a little news
+outside of the social networks,
+http://feedly.com/[Feedly] is showing me headlines
+from newest to oldest.
+I'm sure I miss some news,
+since I only scroll through maybe 100 stories
+at a time,
+but anything worth knowing
+will be mentioned a couple times
+over the days and weeks.
+I just never see some blips in news,
+and that's OK -- it probably wasn't worth the time anyway.
+
+.Podcasts
+I have http://www.beyondpod.mobi/android/index.htm[BeyondPod]
+configured to do the same thing for my audio listening.
+Sometimes I have 50 podcasts queued up,
+and sometimes I run it down to 0.
+I have 3 priorities into which I categorize each feed,
+so I can always hear my favorites first,
+but within each of those priorities,
+the episodes are still presented in LIFO order,
+so I don't fall behind.
+When I listen my way down
+to something that's just out-of-date
+and low in priority,
+I can just delete it.
+
 .Photo Workflow
 The reverse-chronological (or LIFO, last-in-first-out) order
 works great for my photo workflow too.
-When I was working chronologically, 
+When I was working chronologically,
 *every* photo ended up late -- up to a month or 2 at times.
 Working from the newest stuff back fixed that.
 The latest party or event could often
 get posted, while some lower-priority sets of photos
-could wait a little.  When I got super-busy, 
-*some* photos could end up a month or 2 delayed, 
+could wait a little.  When I got super-busy,
+*some* photos could end up a month or 2 delayed,
 but not *all* of them.
 
 .Culling in Reverse
@@ -39,7 +68,7 @@ which is the *first* thing I do after importing photos.
 We often work a scene and shoot until we're convinced
 that we have the shot we want,
 so I start looking for the keepers from the *end*
-of the set and browse my way back 
+of the set and browse my way back
 to the *beginning* of the set.
 When I know I have the keeper,
 I can more confidently skip all the previous images
@@ -50,8 +79,8 @@ when I'll keep finding better versions
 as I work forward.
 
 .Delete Most the Photos
-Once I've picked that 10% I'm keeping, 
-I delete everything else, 
-because I still have the end in mind 
+Once I've picked that 10% I'm keeping,
+I delete everything else,
+because I still have the end in mind
 -- reasonably backing up all my images.
 Some probably find that idea backward too.
