--- a/content/2016/E-Mount_to_Nikon_Adapters.adoc
+++ b/content/2016/E-Mount_to_Nikon_Adapters.adoc
@@ -25,7 +25,7 @@ so I had settled on spending the extra money
 and getting the
 http://amzn.to/2itzBMp[Metabones Adapter].
 
-* Cost about $140 at the time.
+* Cost: about $140 at the time.
 * Physically sets the aperture on my Nikon G lenses.
 * Long-throwing aperture ring for fine control,
   about 50 degrees
@@ -60,7 +60,7 @@ with only a bit of adjustment
 in my expectations
 of the distance to turn the ring.
 
-* Costs about $20.
+* Cost: about $20.
 * Physically sets the aperture on my Nikon G lenses.
 * Aperture ring throws a very short distance,
   about 20 degrees
