--- a/content/2016/E-Mount_to_Nikon_Adapters.adoc
+++ b/content/2016/E-Mount_to_Nikon_Adapters.adoc
@@ -85,7 +85,7 @@ In the end,
 The K&F adapter
 surprised me
 with its build quality,
-and it feels good to use.
+and it feels good to use in the hand.
 I was surprised to find the short
 throw wasn't an issue for my shooting,
 but I do miss the tripod mount
