--- a/content/2017/Best_Images_of_2016.adoc
+++ b/content/2017/Best_Images_of_2016.adoc
@@ -24,7 +24,7 @@ may have gone _into_ the process,
 those images didn't compete
 with the all the interesting people.
 My photographic lighting style
-also continude to show up
+also continue to show up
 in more images than not.
 
 == Curiouser and Curiouser
