split context and host in configs

--- a/content/2017/Best_Images_of_2016.adoc
+++ b/content/2017/Best_Images_of_2016.adoc
@@ -28,20 +28,20 @@ also continue to show up
 in more images than not.
 
 == Curiouser and Curiouser
-image::{site_host}images/2016/curiouser_and_curiouser.jpg[]
+image::{site_context}images/2016/curiouser_and_curiouser.jpg[]
 The model shoots and events were good this year.
 This is Masha Modelle at an event
 at Omni Lens Studio.
 
 == So Easily Swept Away
-image::{site_host}images/2016/so_easily_swept_away.jpg[]
+image::{site_context}images/2016/so_easily_swept_away.jpg[]
 This image of Tara Doratt was shot upside down
 at the Lancaster Camera Club Model Shoot
 at Binns Park in Lancaster.
 
 
 == Erica's Reflection
-image::{site_host}images/2016/ericas_reflection.jpg[role="narrower"]
+image::{site_context}images/2016/ericas_reflection.jpg[role="narrower"]
 Sally invited me to participate
 in a shoot among friends
 who met at last year's Promoting Passion Conference,
@@ -51,7 +51,7 @@ and I came up with the lighting.
 The pond is at Frog Hollow Studios.
 
 == Follow Me Down
-image::{site_host}images/2016/follow_me_down.jpg[]
+image::{site_context}images/2016/follow_me_down.jpg[]
 Here's another with Erica Jay.
 She flopped herself down in that
 contorted position,
@@ -60,7 +60,7 @@ My speedlights were taking a little break,
 so this is open, natural light.
 
 == Becca Glow
-image::{site_host}images/2016/becca_glow.jpg[]
+image::{site_context}images/2016/becca_glow.jpg[]
 This collaboration came about with Becca H
 and DJ Diesel while we were
 doing some promo shots.
@@ -70,7 +70,7 @@ to get those crazy beams
 through the blinds.
 
 == The Way Back
-image::{site_host}images/2016/way_back.jpg[role="narrower"]
+image::{site_context}images/2016/way_back.jpg[role="narrower"]
 Tourist Inn in Hellam
 hosted a Braptizm party
 and I fortunately found some hoopers.
@@ -83,7 +83,7 @@ that work so well in black and white.
 The star is a little bonus.
 
 == Fireball
-image::{site_host}images/2016/fireball.jpg[role="narrower"]
+image::{site_context}images/2016/fireball.jpg[role="narrower"]
 Aaron Brown provided me
 this other black and white shot
 spinning LED poi
@@ -92,7 +92,7 @@ in York, PA.
 
 
 == Industrial Transport
-image::{site_host}images/2016/industrial_transport.jpg[]
+image::{site_context}images/2016/industrial_transport.jpg[]
 DJ Kiltboy takes the helm
 at Shadowland Lancaster.
 As is often the case,
@@ -102,7 +102,7 @@ of lights provided by DJ Diesel
 at Lizard Lounge, Lancaster, PA.
 
 == Spill Not a Drop
-image::{site_host}images/2016/spill_not_a_drop.jpg[role="narrower"]
+image::{site_context}images/2016/spill_not_a_drop.jpg[role="narrower"]
 Cheers is a whirlwind
 of a party thrown monthly
 at JB Lovedraft
@@ -117,7 +117,7 @@ especially when
 they're spinning Drum n Bass all night.
 
 == Rosie the Riveter
-image::{site_host}images/2016/rosie_the_riveter.jpg[role="narrower"]
+image::{site_context}images/2016/rosie_the_riveter.jpg[role="narrower"]
 Marie had a great Halloween costume,
 and it deserved to be captured
 in one of my favorite images
