--- a/content/2016/E-Mount_to_Nikon_Adapters.adoc
+++ b/content/2016/E-Mount_to_Nikon_Adapters.adoc
@@ -82,7 +82,7 @@ of the distance to turn the ring.
 * No service or modifications needed yet.
 
 In the end,
-The K&F adapter
+the K&F Concepts adapter
 surprised me
 with its build quality,
 and it feels good to use in the hand.
