--- a/content/2016/Best_Images_of_2015.adoc
+++ b/content/2016/Best_Images_of_2015.adoc
@@ -30,7 +30,7 @@ and clicking "Select All" on every day
 of images in 2015 on Flickr's Camera Roll.]
 
 == The Orb at Ardmore
-image::{site_host}images/2015/orb.jpg[]
+image::{site_context}images/2015/orb.jpg[]
 The Orb,
 the legendary ambient musicians,
 put on an amazing show
@@ -48,7 +48,7 @@ and ready to go, since I had freely shot
 the opening act.
 
 == DJ Uranko at Tellus 360
-image::{site_host}images/2015/uranko.jpg[]
+image::{site_context}images/2015/uranko.jpg[]
 I was out to Tellus to see friends
 and they had a guest DJ,
 so I had some fun shooting as always.
@@ -60,12 +60,12 @@ to fill some space in the image.
 They really should project the crowd up there.
 
 == The Roar
-image::{site_host}images/2015/roar.jpg[]
+image::{site_context}images/2015/roar.jpg[]
 My friends at Shadowland keep the dance floor intense,
 and they always seem to appreciate seeing photos from the nights.
 
 == Playing with Fire in God's Basement
-image::{site_host}images/2015/fire.jpg[]
+image::{site_context}images/2015/fire.jpg[]
 This year, I got brave and ventured out again
 to longer nights,
 like Big Dub out in the woods
@@ -74,7 +74,7 @@ It was the first party in a newly reclaimed warehouse
 now called _The Arts Garage: Waterfront_.
 
 == Neon Kaleidscope
-image::{site_host}images/2015/nk5.jpg[]
+image::{site_context}images/2015/nk5.jpg[]
 The Neon Kaleidoscope (previously Pure) crew
 celebrated 5 years in 2015.
 I had just seen an exhibition
@@ -84,18 +84,18 @@ stitching to make a wide image to capture
 everyone at one of Neon Kaleidoscope's biggest nights.
 
 == DJ Diesel
-image::{site_host}images/2015/diesel.jpg[role="narrower"]
+image::{site_context}images/2015/diesel.jpg[role="narrower"]
 Jay and I have been splashing light
 around the Lizard Lounge for quite some time now.
 
 == Knobs and Switches
-image::{site_host}images/2015/knobs.jpg[]
+image::{site_context}images/2015/knobs.jpg[]
 I've started working to photograph
 the gear and other environmental stuff
 from raves. I love the gesture in this image.
 
 == Nell at Lizard Lounge
-image::{site_host}images/2015/nell.jpg[role="narrower"]
+image::{site_context}images/2015/nell.jpg[role="narrower"]
 I shot many of my favorite images
 at Lizard Lounge this year.
 This image resulted from a quick
@@ -106,18 +106,17 @@ really carrying more gear
 into clubs.
 
 == Inside and Out
-image::{site_host}images/2015/duplicity.jpg[]
+image::{site_context}images/2015/duplicity.jpg[]
 I had the great opportunity to shoot with Marsha Denill
 in the same house with Brooke Shaden!
 The inspiration was strong this day,
 since I knew others would be making amazing images.
 
 == Fiesta
-image::{site_host}images/2015/fiesta.jpg[]
+image::{site_context}images/2015/fiesta.jpg[]
 I love photographing toys,
 and my bright green Ford Fiesta
 is my favorite car I've had,
 so it only makes sense for me
 to have a tiny replica of the car.
 I had wanted to shoot this image for a couple years.
-
