mention the lens

--- a/content/2023/Concerts_Pixel_6_Pro_vs_Sony_a6000.adoc
+++ b/content/2023/Concerts_Pixel_6_Pro_vs_Sony_a6000.adoc
@@ -9,7 +9,8 @@ clubs, local concerts,
 and everything else
 in an amateur capacity
 with my array of Sony a6000 cameras
-for over 8 years.
+for over 8 years
+often with the Tamron 17-50mm f/2.8.
 That camera technology is old
 but it serves me well.
 
